[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auralis-moodify"
version = "0.1.0"
description = "Multimodal emotion-aware music streaming engine."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
dependencies = [
    "opencv-python",
    "speechrecognition",
    "spotipy",
    "deepface",
    "transformers",
    "customtkinter",
    "torch",
    "tensorflow"
]

[project.scripts]
# This allows users to run your app by typing 'auralis' in the terminal
auralis = "app:main"
